--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   path_provider: 0.4.1
   barcode_scan: ^0.0.4
   qr_flutter: ^1.1.1
+  camera:
+  dio:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
