--- a/desktop/package.json
+++ b/desktop/package.json
@@ -15,23 +15,31 @@
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.5.2",
+    "@types/moxios": "^0.4.8",
     "@types/nedb": "^1.8.7",
+    "@types/node-notifier": "^5.4.0",
     "@types/qrcode.react": "^0.8.2",
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^4.3.1",
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
+    "node-notifier": "^5.4.0",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
+    "react-jsonschema-form": "^1.6.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-router-transition": "^1.3.0",
     "react-scripts": "^3.0.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "typescript": "3.4.5"
   },
   "scripts": {
@@ -70,9 +78,11 @@
   },
   "main": "public/electron.js",
   "devDependencies": {
+    "axios-mock-adapter": "^1.17.0",
     "concurrently": "^4.1.0",
     "electron": "^4.1.4",
     "electron-builder": "^20.44.4",
+    "ts-mockito": "^2.3.1",
     "wait-on": "^3.2.0"
   },
   "files": [
