--- a/desktop/package.json
+++ b/desktop/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^4.3.1",
+    "electron-context-menu": "^0.13.0",
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
     "node-notifier": "^5.4.0",
