--- a/desktop/package.json
+++ b/desktop/package.json
@@ -30,6 +30,7 @@
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
     "node-notifier": "^5.4.0",
+    "print-js": "^1.0.61",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
