--- a/desktop/package.json
+++ b/desktop/package.json
@@ -43,6 +43,8 @@
     "react-scripts": "^3.0.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
     "typescript": "3.4.5",
     "wikijs": "^5.5.0"
   },
