--- a/desktop/package.json
+++ b/desktop/package.json
@@ -21,6 +21,7 @@
     "@types/qrcode.react": "^0.8.2",
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-select": "^3.0.0",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
@@ -36,11 +37,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
+    "react-image-lightbox": "^5.1.0",
     "react-jsonschema-form": "^1.6.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-router-transition": "^1.3.0",
     "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
