--- a/desktop/package.json
+++ b/desktop/package.json
@@ -20,6 +20,7 @@
     "@types/node-notifier": "^5.4.0",
     "@types/qrcode.react": "^0.8.2",
     "@types/react-redux": "^7.1.0",
+    "@types/react-resizable": "^1.7.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-select": "^3.0.0",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
@@ -40,6 +41,7 @@
     "react-image-lightbox": "^5.1.0",
     "react-jsonschema-form": "^1.6.1",
     "react-redux": "^7.1.0",
+    "react-resizable": "^1.8.0",
     "react-router-dom": "^5.0.1",
     "react-router-transition": "^1.3.0",
     "react-scripts": "^3.0.1",
