--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.0.0+1
+  carousel_slider: ^1.3.0
   flutter_slidable: "^0.5.3"
   http: ^0.12.0+2
   json_annotation: ^2.0.0
