fixed ui bugs and add new style

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,13 @@
       "program": "bin/main.dart",
       "request": "launch",
       "type": "dart"
+    },
+    {
+      "name": "Flutter profile",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "profile",
+      "program": "mobile/lib/main.dart"
     }
   ]
 }
