--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -19,9 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   provider: ^3.0.0+1
   carousel_slider: ^1.3.0
   flutter_slidable: "^0.5.3"
+  sliding_up_panel: ^0.3.4
   http: ^0.12.0+2
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.3+1
@@ -32,6 +34,7 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
+  google_maps_flutter: ^0.5.20+6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +61,7 @@ flutter:
   assets:
     - assets/barcode.png
     - assets/screen.png
+    - assets/database.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
