--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  # google_maps_flutter: ^0.5.20
   provider: ^3.0.0+1
   carousel_slider: ^1.3.0
   flutter_slidable: "^0.5.3"
@@ -34,7 +34,6 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  google_maps_flutter: ^0.5.20+6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
