--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -28,12 +28,12 @@ dependencies:
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.3+1
   path_provider: 0.4.1
-  barcode_scan: ^0.0.4
   qr_flutter: ^1.1.1
   camera:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
+  json_schema_form: ^0.5.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
