--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: ^0.5.2
+  json_schema_form:
+  image_picker: ^0.6.1+4
+  permission_handler: ^3.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
