--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,54 +4,55 @@
   "version": "0.7.9",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.6.2",
     "@lingui/cli": "^2.8.3",
     "@lingui/macro": "^2.8.3",
     "@lingui/react": "^2.8.3",
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0",
-    "@types/draft-js": "^0.10.32",
-    "@types/jest": "^24.0.15",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
+    "@types/draft-js": "^0.10.35",
+    "@types/jest": "^24.0.18",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.5.2",
-    "@types/moxios": "^0.4.8",
-    "@types/nedb": "^1.8.7",
+    "@types/moxios": "^0.4.9",
+    "@types/nedb": "^1.8.9",
     "@types/node-notifier": "^5.4.0",
     "@types/qrcode.react": "^0.8.2",
-    "@types/react-redux": "^7.1.0",
-    "@types/react-resizable": "^1.7.0",
-    "@types/react-router-dom": "^4.3.4",
-    "@types/react-select": "^3.0.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-resizable": "^1.7.1",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react-select": "^3.0.4",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.0",
+    "@types/react-window": "^1.8.1",
     "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^4.3.1",
-    "electron-context-menu": "^0.13.0",
+    "electron-context-menu": "^0.15.0",
     "electron-is-dev": "^1.1.0",
     "jquery": "^3.4.1",
-    "node-notifier": "^5.4.0",
+    "node-notifier": "^6.0.0",
     "print-js": "^1.0.61",
     "printjs": "^1.1.0",
     "qrcode.react": "^0.9.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.5",
+    "react": "^16.9.0",
+    "react-desktop": "^0.3.9",
+    "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.9",
     "react-image-lightbox": "^5.1.0",
-    "react-jsonschema-form": "^1.6.1",
-    "react-redux": "^7.1.0",
+    "react-jsonschema-form": "^1.8.0",
+    "react-redux": "^7.1.1",
     "react-resizable": "^1.8.0",
     "react-router-dom": "^5.0.1",
     "react-router-transition": "^1.3.0",
-    "react-scripts": "^3.0.1",
-    "react-select": "^3.0.4",
+    "react-scripts": "^3.1.2",
+    "react-select": "^3.0.5",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.3",
-    "typescript": "3.4.5",
-    "wikijs": "^5.5.0"
+    "semantic-ui-react": "^0.88.1",
+    "typescript": "3.6.3",
+    "wikijs": "^6.0.0"
   },
   "scripts": {
     "add-locale": "lingui add-locale",
@@ -90,13 +91,14 @@
   },
   "main": "public/electron.js",
   "devDependencies": {
+    "@testing-library/react": "^9.1.4",
     "axios-mock-adapter": "^1.17.0",
-    "concurrently": "^4.1.0",
-    "cross-env": "^5.2.0",
-    "electron": "^4.1.4",
-    "electron-builder": "^20.44.4",
-    "ts-mockito": "^2.3.1",
-    "wait-on": "^3.2.0"
+    "concurrently": "^4.1.2",
+    "cross-env": "^6.0.0",
+    "electron": "^6.0.10",
+    "electron-builder": "^21.2.0",
+    "ts-mockito": "^2.5.0",
+    "wait-on": "^3.3.0"
   },
   "files": [
     "./build/*"
