--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: 0.6.8
+  json_schema_form: 0.6.9
   image_picker: ^0.6.1+4
   permission_handler: ^3.2.2
   flutter_staggered_grid_view: ^0.3.0
   printing: ^3.0.2
+  numberpicker: ^1.1.0
   file_chooser:
     path: plugins/file_chooser
 
