--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   printing: ^3.0.2
   numberpicker: ^1.1.0
+  firebase_core: ^0.4.3+1
+  firebase_ml_vision: ^0.9.3+5
+  flutter_tags: ^0.4.5
   file_chooser:
     path: plugins/file_chooser
 
