--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   # google_maps_flutter: ^0.5.20
-  provider: ^3.0.0+1
+  provider: ^4.0.4
   carousel_slider: ^1.3.0
   flutter_slidable: "^0.5.3"
   sliding_up_panel: ^0.3.4
@@ -33,15 +33,16 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: 0.7.3
+  json_schema_form: ^0.8.4
   image_picker: ^0.6.1+4
-  permission_handler: ^3.2.2
+  permission_handler: ^4.4.0+hotfix.1
   flutter_staggered_grid_view: ^0.3.0
   printing: ^3.0.2
   numberpicker: ^1.1.0
   firebase_core: ^0.4.3+1
   firebase_ml_vision: ^0.9.3+5
   flutter_tags: ^0.4.5
+  flutter_easyrefresh: ^2.1.0
   file_chooser:
     path: plugins/file_chooser
 
