--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,5 @@
+# @format
+
 name: storage_management_mobile
 description: A new Flutter project.
 
@@ -20,10 +22,10 @@ dependencies:
   flutter:
     sdk: flutter
   # google_maps_flutter: ^0.5.20
-  provider: ^4.0.4
+  provider: ^4.1.3
   carousel_slider: ^1.3.0
   flutter_slidable: "^0.5.3"
-  sliding_up_panel: ^0.3.4
+  sliding_up_panel: ^1.0.2
   http: ^0.12.0+2
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.6
@@ -33,10 +35,11 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: ^0.8.5
-  image_picker: ^0.6.1+4
+  json_schema_form:
+  image_picker: ^0.6.7+2
   permission_handler: ^4.4.0+hotfix.1
   flutter_staggered_grid_view: ^0.3.0
+  modal_bottom_sheet: ^0.1.6+1
   printing: ^3.0.2
   numberpicker: ^1.1.0
   firebase_core: ^0.4.3+1
