--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -35,7 +35,8 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form:
+  json_schema_form: ^1.0.4+2
+  google_maps_flutter: ^0.5.28+1
   image_picker: ^0.6.7+2
   permission_handler: ^4.4.0+hotfix.1
   flutter_staggered_grid_view: ^0.3.0
@@ -46,6 +47,7 @@ dependencies:
   firebase_ml_vision: ^0.9.3+5
   flutter_tags: ^0.4.5
   flutter_easyrefresh: ^2.1.0
+  location: ^3.0.2
   file_chooser:
     path: plugins/file_chooser
 
