--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   http: ^0.12.0+2
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.6
-  path_provider: 0.4.1
+  path_provider: ^1.6.11
   qr_flutter: ^3.1.0
   camera:
   dio:
@@ -47,6 +47,7 @@ dependencies:
   flutter_tags: ^0.4.5
   flutter_easyrefresh: ^2.1.0
   location: ^3.0.2
+  cached_network_image: ^2.2.0+1
   file_chooser:
     path: plugins/file_chooser
 
