--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.0.0
-  json_serializable: ^3.0.0
-  mockito:
+  mockito: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
