--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,15 @@ dependencies:
   dio:
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: ^1.0.4+3
+  json_schema_form: ^1.0.4+4
   google_maps_flutter: ^0.5.28+1
   image_picker: ^0.6.7+2
-  permission_handler: ^4.4.0+hotfix.1
   flutter_staggered_grid_view: ^0.3.0
   modal_bottom_sheet: ^0.1.6+1
   printing: ^3.0.2
   numberpicker: ^1.1.0
-  firebase_core: ^0.4.3+1
-  firebase_ml_vision: ^0.9.3+5
+  firebase_core: ^0.4.5
+  firebase_ml_vision: ^0.9.4
   flutter_tags: ^0.4.5
   flutter_easyrefresh: ^2.1.0
   location: ^3.0.2
@@ -59,6 +58,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.1
+  mock_web_server: ^4.1.1
+  test: any
+  flutter_driver:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
