--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   path_provider: ^1.6.11
   qr_flutter: ^3.1.0
   camera:
-  dio:
+  dio: ^3.0.9
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: ^1.0.4+4
+  json_schema_form: ^1.1.2+4
   google_maps_flutter: ^0.5.28+1
   image_picker: ^0.6.7+2
   flutter_staggered_grid_view: ^0.3.0
@@ -47,8 +47,6 @@ dependencies:
   flutter_easyrefresh: ^2.1.0
   location: ^3.0.2
   cached_network_image: ^2.2.0+1
-  file_chooser:
-    path: plugins/file_chooser
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
