--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   dio: ^3.0.9
   image: ^2.1.4
   web_socket_channel: ^1.0.13
-  json_schema_form: ^1.1.7+1
+  json_schema_form: ^1.1.7+3
+  dartwiki: ^1.0.0+2
   google_maps_flutter: ^0.5.28+1
   image_picker: ^0.6.7+2
   flutter_staggered_grid_view: ^0.3.0
