--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,29 +25,29 @@ dependencies:
   carousel_slider: ^1.3.0
   flutter_slidable: "^0.5.3"
   sliding_up_panel: ^1.0.2
-  http: ^0.12.0+2
+  http: ^0.13.3
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.6
-  path_provider: ^1.6.11
-  qr_flutter: ^3.1.0
+  path_provider: ^2.0.2
+  qr_flutter: ^4.0.0
   camera:
-  dio: ^3.0.9
-  image: ^2.1.4
+  dio: ^4.0.0
+  image: ^3.0.2
   web_socket_channel: ^1.0.13
-  json_schema_form: ^1.1.7+3
-  dartwiki: ^1.0.0+2
-  google_maps_flutter: ^0.5.28+1
-  image_picker: ^0.6.7+2
+  json_schema_form: ^1.1.9+2
+  dartwiki: ^1.0.1
+  google_maps_flutter: ^2.0.6
+  image_picker: ^0.8.3+3
   flutter_staggered_grid_view: ^0.3.0
   modal_bottom_sheet: ^0.1.6+1
-  printing: ^3.0.2
+  printing: ^5.5.0
   numberpicker: ^1.1.0
-  firebase_core: ^0.4.5
-  firebase_ml_vision: ^0.9.4
+  firebase_core: ^1.6.0
+  # google_ml_kit: ^0.7.1
   flutter_tags: ^0.4.5
   flutter_easyrefresh: ^2.1.0
-  location: ^3.0.2
-  cached_network_image: ^2.2.0+1
+  location: ^4.3.0
+  cached_network_image: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,7 +59,6 @@ dev_dependencies:
   mockito: ^4.1.1
   mock_web_server: ^4.1.1
   network_image_mock: ^1.0.0
-  test: any
   flutter_driver:
     sdk: flutter
 
