--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
     sdk: flutter
   provider: ^4.1.3
   carousel_slider: ^1.3.0
-  flutter_slidable: "^0.5.3"
+  flutter_slidable: "^0.6.0"
   sliding_up_panel: ^1.0.2
   http: ^0.13.3
   json_annotation: ^2.0.0
@@ -39,7 +39,7 @@ dependencies:
   google_maps_flutter: ^2.0.6
   image_picker: ^0.8.3+3
   flutter_staggered_grid_view: ^0.3.0
-  modal_bottom_sheet: ^0.1.6+1
+  modal_bottom_sheet: ^2.0.0
   printing: ^5.5.0
   numberpicker: ^1.1.0
   firebase_core: ^1.6.0
