--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   web_socket_channel: ^1.0.13
   json_schema_form: ^1.1.9+2
   dartwiki: ^1.0.1
-  google_maps_flutter: ^2.0.6
+  google_maps_flutter: ^2.0.10
   image_picker: ^0.8.3+3
   flutter_staggered_grid_view: ^0.3.0
   modal_bottom_sheet: ^2.0.0
@@ -56,9 +56,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.1
-  mock_web_server: ^4.1.1
-  network_image_mock: ^1.0.0
+  mockito: any
+  mock_web_server: any
+  network_image_mock: any
   flutter_driver:
     sdk: flutter
 
